--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-/*=============== CUSTOM FONT ===============*/
+/* =============== CUSTOM FONT ===============*/
 @font-face {
     font-family: 'Avenir';
     src: url('../fonts/Avenir.eot?#iefix') format('embedded-opentype'),  url('../fonts/Avenir.woff') format('woff'), url('../fonts/Avenir.ttf')  format('truetype'), url('../fonts/Avenir.svg#Avenir') format('svg');
@@ -9,17 +9,17 @@
   --header-height: 3.5rem;
 
   /*========== Colors ==========*/
-  --hue: 14;
-  --first-color: hsl(var(--hue), 91%, 54%);
-  --first-color-alt: hsl(var(--hue), 91%, 50%);
-  --title-color: hsl(var(--hue), 4%, 100%);
-  --text-color: hsl(var(--hue), 4%, 85%);
-  --text-color-light: hsl(var(--hue), 4%, 55%);
-  --body-color: linear-gradient(90deg, hsl(104, 28%, 40%) 0%, hsl(58, 28%, 40%) 100%);
-  --container-color: linear-gradient(136deg, hsl(104, 28%, 35%) 0%, hsl(58, 28%, 35%) 100%);
+  --hue: ;
+  --first-color: #000000;
+  --first-color-alt: ;
+  --title-color: ;
+  --text-color: #FE0012;
+  --text-color-light: ;
+  --body-color: #F9F9F9;
+  --container-color: #e6e6e6 ;
 
   /*========== Font and typography ==========*/
-  --body-font: 'Avenir', sans-serif;
+  --body-font: 'Avenir', Helvetica, sans-serif;
   --biggest-font-size: 2rem;
   --h1-font-size: 1.5rem;
   --h2-font-size: 1.25rem;
@@ -47,27 +47,281 @@
   --z-fixed: 100;
 }
 
+/* Responsive typography */
+@media screen and (min-width: 992px) {
+  :root {
+    --biggest-font-size: 4rem;
+    --h1-font-size: 2.25rem;
+    --h2-font-size: 1.5rem;
+    --h3-font-size: 1.25rem;
+    --normal-font-size: 1rem;
+    --small-font-size: .875rem;
+    --smaller-font-size: .813rem;
+  }
+}
 
-
-
-*,
-*::after,
-*::before {
+/*=============== BASE ===============*/
+*, *::after, *::before {
     box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
+html{
+  scroll-behavior: smooth;
 }
 
 body {
+    font-family: var(--body-font);
+}
+
+h1,h2,h3,h4{
+  color: var(--title-color);
+  font-weight: var(--font-semi-bold);
+}
+
+h2{
+  font-size: 1.25rem;
+}
+
+ul{
+  list-style: none;
+}
+
+a{
+  text-decoration: none;
+}
+
+img{
+  max-width: 100%;
+  height: auto;
+}
+
+button, input{
+  border: none;
+  outline: none;
+}
+
+button{
+  cursor: pointer;
+  font-family: var(--body-font);
+  font-size: var(--normal-font-size);
+}
+
+/*=============== REUSABLE CSS CLASSES ===============*/
+
+
+/*=============== LAYOUT ===============*/
+.container{
+  margin-left: var(--mb-1-5);
+  margin-right: var(--mb-1-5);
+  max-width: 1200px;
+}
+
+.grid{
+  display: grid;
+}
+
+.main{
+  overflow: hidden; /*For animation*/
+}
+
+/*=============== HEADER ===============*/
+.header{
+  width: 100%;
+  background: var(--body-color);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: var(--z-fixed);
+  border-bottom: 1px solid var(--container-color);
+
+}
+
+/*======= nav =======*/
+.nav{
+  height: var(--header-height);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.nav__logo{
+  display: flex;
+  align-items: center;
+  column-gap: .5rem;
+  font-weight: var(--font-medium);
+}
+
+.nav__logo-img{
+  width: 5.5rem;
+}
+.nav__link,
+.nav__logo,
+.nav__toggle,
+.nav__close{
+  color: var(--title-color);
+}
+
+.nav__toggle{
+  font-size: 1.25rem;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 767px) {
+  .nav__menu{
+    position: fixed;
+    width: 100%;
+    background: var(--container-color);
+    top: 0;
+    top: -150%;
+    left: 0;
+    padding: 3.5rem 0;
+    transition: .2s;
+    z-index: var(--z-fixed);
+    border-radius: 0 0 1.5rem 1.5rem;
+  }  
+}
+
+.nav__img{
+  width: 100px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.nav__close{
+  font-size: 1.8rem;
+  position: absolute;
+  top: .5rem;
+  right: 0.7rem;
+  cursor: pointer;
+}
+
+.nav__list{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 2rem;
+}
+
+.nav__link{
+  text-transform: uppercase;
+  font-weight: var(--font-black);
+  transition: .2s;
+}
+
+.nav__link:hover{
+  color: var(--text-color);
+}
+
+/* Show menu */
+.show-menu{
+  top: 0;
+}
+
+/*=============== MAIN ===============*/
+/*======= activiteiten =======*/
+
+/*======= agenda =======*/
+table{
+  width: 100%;
+  border-spacing: 8px;
+  border-collapse: separate;
+  border: 1px solid #e1e1e2;
+
+}
+
+thead{
+  border-spacing: 8px;
+  border-collapse: separate;
+}
+
+
+th, td{
+  text-align: center;
+  width: 30px;
+  height: 30px;
+  border: none;
+}
+td{
+  border: 1px solid #e1e1e2;
+  background: #fff;
+  width: auto;
+  height: 32px;
+  color: #979797;
+}
+
+.active-day{
+  border: none !important;
+  background: #fd000d !important;
+  color: #fff;
+}
+
+.new{
+  visibility: hidden;
+}
+
+.card-wrapper{
+  width: 100%;
+}
+
+.card-image{
+  width: 303.983px;
+  height: 171.25px;
+  background-color: black;
+  /* background-image: url(/assets/img/activiteiten1-img.jpeg); */
+}
+.card{
+  background-color: #f7f7f7;
+  margin-bottom: 20px;
+  position: relative;
+  flex-wrap: wrap;
+  max-width: 600px;
+  width: 100%;
+  flex-direction: column;
+  text-decoration: none;
+  color: inherit;
+}
+
+.accompanying{
+  font-size: .9231rem;
+  color: #454545;
+}
+
+
+/*=============== BUTTONS ===============*/
+
+/*=============== FOOTER ===============*/
+
+
+/*===============  BREAKPOINTS ===============*/
+/* For small devices 20 em*/
+@media screen and (max-width: 320px){
+  
+}
+
+
+/* For medium devices */
+@media screen and (max-width: 576px){
+  
+}
+
+@media screen and (min-width: 767px){
+  body{
     margin: 0;
-    padding: 0;
-    font-family: 'Avenir', Helvetica, sans-serif;
-    display: grid;
-    height: 100vh;
-    grid-template-columns: 1fr;
+  }
 }
 
-
-
-header{
- 
+/* For large devices */
+@media screen and (min-width: 992px){
+  
 }
 
+@media screen and (min-width: 1200px){
+  
+
+}
+
+/*=============== SCROLL UP ===============*/
+
+/*=============== SCROLL BAR =============== */
